--- a/gettreat/templates/gettreat/home/about.html
+++ b/gettreat/templates/gettreat/home/about.html
@@ -8,7 +8,7 @@
 
     <div class="section-title">
       <h2>About Us</h2>
-      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <p>We are to bring medical services to your door step though technology.</p>
     </div>
 
     <div class="row">
@@ -16,20 +16,13 @@
         <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
-        <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+        <h3>THE MOST WORTHY AND TORUSTED LIVE SUPPORT</h3>
         <p class="fst-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Value Life is The Highest Quality Healthcare. The Hospital of the Future, Today. The hospital you trust to care for those you love.The heart of your healthcare
         </p>
-        <ul>
-          <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-        </ul>
+       
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum
+         For emergency,record keeping and doctor appointment. the fastest way to get directly to your doctor without leaving your comfort zone.updates on medical appointments and knowledge on pharmacutical products.
         </p>
       </div>
     </div>
@@ -48,7 +41,7 @@
           <i class="fas fa-user-md"></i>
           <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
 
-          <p><strong>Doctors</strong> consequuntur quae qui deca rode</p>
+          <p><strong>Doctors</strong> available</p>
           <a href="#">Find out more &raquo;</a>
         </div>
       </div>
@@ -57,7 +50,7 @@
         <div class="count-box">
           <i class="far fa-hospital"></i>
           <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1" class="purecounter"></span>
-          <p><strong>Departments</strong> adipisci atque cum quia aut numquam delectus</p>
+          <p><strong>Departments</strong> availabe in the hospital</p>
           <a href="#">Find out more &raquo;</a>
         </div>
       </div>
@@ -66,7 +59,7 @@
         <div class="count-box">
           <i class="fas fa-flask"></i>
           <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
-          <p><strong>Research Lab</strong> aut commodi quaerat. Aliquam ratione</p>
+          <p><strong>Research Lab</strong> requests</p>
           <a href="#">Find out more &raquo;</a>
         </div>
       </div>
@@ -74,8 +67,8 @@
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
           <i class="fas fa-award"></i>
-          <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="purecounter"></span>
-          <p><strong>Awards</strong> rerum asperiores dolor molestiae doloribu</p>
+          <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+          <p><strong>Awards</strong> received</p>
           <a href="#">Find out more &raquo;</a>
         </div>
       </div>
@@ -86,97 +79,16 @@
 </section><!-- End Counts Section -->
 
 
-<!-- ======= Testimonials Section ======= -->
-<section id="testimonials" class="testimonials">
-  <div class="container" data-aos="fade-up">
 
-    <div class="section-title">
-      <h2>Testimonials</h2>
-      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-    </div>
 
-    <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-      <div class="swiper-wrapper">
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-          </div>
-        </div><!-- End testimonial item -->
-
-      </div>
-      <div class="swiper-pagination"></div>
-    </div>
-
-  </div>
-</section><!-- End Testimonials Section -->
-
+        
 <!-- ======= Doctors Section ======= -->
 <section id="doctors" class="doctors section-bg">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Doctors</h2>
-      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <h2>HOSPITALS AVAILABLE</h2>
+      <p>Hospitals registerd with the sysrem</p>
     </div>
 
     <div class="row">
@@ -194,7 +106,7 @@
           </div>
           <div class="member-info">
             <h4>Walter White</h4>
-            <span>Chief Medical Officer</span>
+            <span>referal hospital</span>
           </div>
         </div>
       </div>
@@ -212,7 +124,7 @@
           </div>
           <div class="member-info">
             <h4>Sarah Jhonson</h4>
-            <span>Anesthesiologist</span>
+            <span>clinic</span>
           </div>
         </div>
       </div>
@@ -248,7 +160,7 @@
           </div>
           <div class="member-info">
             <h4>Amanda Jepson</h4>
-            <span>Neurosurgeon</span>
+            <span>pediotriciary hospital</span>
           </div>
         </div>
       </div>
