--- a/gettreat/templates/gettreat/hospital/indexhp.html
+++ b/gettreat/templates/gettreat/hospital/indexhp.html
@@ -156,8 +156,8 @@
                                       <thead>
                                       <tr>
                                           <th></th>
-                                          <th>Name</th>
-                                          <th>Register Date</th>
+                                          <th>patient Name</th>
+                                          <th>Registerd date</th>
                                           <th class="text-right">Location</th>
                                           <th>Hospital</th>
                                           <th>Status</th>
@@ -225,7 +225,7 @@
                                 </div>
                                 {% endfor %}
                               {% else %}
-                                <h2>You have no hospitals registered yet</h2>
+                                <h2>You have no Doctors registered yet</h2>
                             {% endif %}
                              
                               <div class="text-center">
