--- a/gettreat/templates/gettreat/home/footer.html
+++ b/gettreat/templates/gettreat/home/footer.html
@@ -1,16 +1,15 @@
 <footer id="footer">
     <div class="footer-top">
-      <div class="container">
-        <div class="row">
+      <div class="container-fluid bg-dark">
+        <div class="row pt-5">
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>Medicio</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+              
+                <strong>Phone:</strong> +256 706210797<br>
+                <strong>Email:</strong> nankyarecky@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -36,17 +35,17 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Get a doctor</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Antinental</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Medical Record</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Emergency</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Subscribe for ur daily news</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -54,15 +53,14 @@
           </div>
 
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
+        <div class="copyright">
         &copy; Copyright <strong><span>Value Life</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Developed by <a href="">BradiePoa</a>
       </div>
+      </div>  
     </div>
+
+    
   </footer><!-- End Footer -->
