--- a/gettreat/templates/gettreat/home/footer.html
+++ b/gettreat/templates/gettreat/home/footer.html
@@ -57,7 +57,7 @@
         &copy; Copyright <strong><span>Value Life</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Developed by <a href="">BradiePoa</a>
+        Developed by <a href="">Rebbeca</a>
       </div>
       </div>  
     </div>
