--- a/gettreat/templates/gettreat/home/clients_infor.html
+++ b/gettreat/templates/gettreat/home/clients_infor.html
@@ -2,7 +2,29 @@
 {% load static %}
 {% block content %}
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1>Clients Profiles Page</h1>
+
+<!-- ======= Counts Section ======= -->
+<br><br><br><br>
+<section>
+  <div class="container-fluid" data-aos="fade-up">
+
+    <div class="row">
+      <div class="col-lg-12 col-md-6">
+        <div class="card bg-primary">
+        	<div class="card-body">
+        		<form action="" method="POST">
+        			{% csrf_token %}
+
+        			{{ form.as_p }}
+
+        		</form>
+        		<p><strong>Doctors</strong> available</p>
+          		<a href="#">Find out more &raquo;</a>
+        	</div>
+        </div>
+        </div>
+    </div>
+  </div>
+</section><!-- End Counts Section -->
 
 {% endblock content %}
