--- a/gettreat/templates/gettreat/home/navbar.html
+++ b/gettreat/templates/gettreat/home/navbar.html
@@ -16,9 +16,7 @@
 <header id="header" class="fixed-top">
 <div class="container d-flex align-items-center">
 
-  <a href="index.html" class="logo me-auto"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
-  <!-- Uncomment below if you prefer to use an image logo -->
-  <h1 class="logo me-auto"><a href="">VF</a></h1>
+  <a href="{% url 'gettreat:homepage' %}" class="logo me-auto"><img src="{% static 'assets/img/logo.JPG' %}" alt=""></a>
   {% if user.is_patient %}
     <a href="{% url 'gettreat:clientspage' %}">Hello, {{request.user}}</a>  | &nbsp;
     <a class="nav-link" href="{% url 'gettreat:clientspage' %}">Logout</a>
