--- a/gettreat/templates/gettreat/home/main.html
+++ b/gettreat/templates/gettreat/home/main.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'medicio/assets/img/favicon.png' %}" rel="icon">
+  <link href="{% static 'assets/img/logo.jpg' %}" rel="icon">
   <link href="{% static 'medicio/assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
