--- a/gettreat/templates/gettreat/home/navbar.html
+++ b/gettreat/templates/gettreat/home/navbar.html
@@ -19,7 +19,7 @@
   <a href="{% url 'gettreat:homepage' %}" class="logo me-auto"><img src="{% static 'assets/img/logo.jpg' %}" alt=""></a>
   {% if user.is_patient %}
     <a href="{% url 'gettreat:clientspage' %}">Hello, {{request.user}}</a>  | &nbsp;
-    <a class="nav-link" href="{% url 'gettreat:clientspage' %}">Logout</a>
+    <a class="nav-link" href="{% url 'gettreat:logout' %}">Logout</a>
   {% else %}
     <a href="{% url 'gettreat:loginpage' %}"><span class="d-none d-md-inline">Make an</span> Appointment</a>
 
