--- a/gettreat/templates/gettreat/home/navbar.html
+++ b/gettreat/templates/gettreat/home/navbar.html
@@ -21,7 +21,7 @@
     <a href="{% url 'gettreat:clientspage' %}">Hello, {{request.user}}</a>  | &nbsp;
     <a class="nav-link" href="{% url 'gettreat:logout' %}">Logout</a>
   {% else %}
-    <a href="{% url 'gettreat:loginpage' %}"><span class="d-none d-md-inline">Make an</span> Appointment</a>
+    <a href="{% url 'gettreat:loginpage' %}"><span class="d-none d-md-inline">Sign</span> Up</a>
 
   {% endif %}
 
