--- a/gettreat/templates/gettreat/hospital/navbar.html
+++ b/gettreat/templates/gettreat/hospital/navbar.html
@@ -115,7 +115,7 @@
                     </a>
                 </li>
                 <li class="waves-effect waves-light">
-                    <a href="">
+                    <a href="{% url 'gettreat:logout' %}">
                         <i class="ti-layout-sidebar-left"></i> Logout
                     </a>
                 </li>
