--- a/gettreat/templates/gettreat/home/clients_infor.html
+++ b/gettreat/templates/gettreat/home/clients_infor.html
@@ -8,15 +8,36 @@
 <br><br><br><br>
 <section>
   <div class="container" data-aos="fade-up">
-
+    {% include '../messages.html' %}
     <div class="row">
-      <div class="col-lg-12 col-md-6">
+      <div class="col-lg-8 col-md-6">
         <div class="card">
         	<div class="card-body">
         		<form action="" method="POST">
         			{% csrf_token %}
 
-        			{{ form|crispy }}
+              <div class="form-group form-control">
+        			 {{ form.patient_Name|as_crispy_field }}
+              </div>
+
+              <div class="form-group form-control">
+               {{ form.Phone_Number|as_crispy_field }}
+              </div>
+
+              <div class="form-group form-control">
+               {{ form.Location_Discription|as_crispy_field }}
+              </div>
+
+              {% if user.is_hospital %}
+
+              <div class="form-group form-control">
+               {{ form.Hospital|as_crispy_field }}
+              </div>
+
+              <div class="form-group form-control">
+               {{ form.status|as_crispy_field }}
+              </div>
+              {% endif %}
 
               <div class="form-group">
                 <input class=" form-control btn btn-success btn-lg" type="submit" name="Rquest Emergecy">
@@ -26,6 +47,17 @@
 
         		</form>
         	</div>
+        </div>
+        </div>
+
+
+
+
+        <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <p>client's information</p>
+          </div>
         </div>
         </div>
     </div>
