--- a/gettreat/templates/gettreat/hospital/indexhp.html
+++ b/gettreat/templates/gettreat/hospital/indexhp.html
@@ -136,10 +136,10 @@
                   </div>
 
                   <!--  project and team member start -->
-                  <div class="col-xl-8 col-md-12">
+                  <div class="col-lg-12 col-md-12">
                       <div class="card table-card">
                           <div class="card-header bg-info">
-                              <h5>Registered Patients</h5>
+                              <h5>Emergency Request</h5>
                               <div class="card-header-right">
                                   <ul class="list-unstyled card-option">
                                       <li><i class="fa fa fa-wrench open-card-option"></i></li>
@@ -152,32 +152,33 @@
                           </div>
                           <div class="card-block">
                               <div class="table-responsive">
+                                {% include '../messages.html' %}
                                   <table class="table table-hover">
                                       <thead>
                                       <tr>
                                           <th></th>
                                           <th>patient Name</th>
-                                          <th>Registerd date</th>
-                                          <th class="text-right">Location</th>
+                                          <th>Phone Number</th>
+                                          <th class="text-right">Patient ID</th>
                                           <th>Hospital</th>
+                                          <th>Date</th>
                                           <th>Status</th>
+                                          <th></th>
                                       </tr>
                                       </thead>
                                       <tbody>
-                                      {% if patients %}
-                                        {% for clients in patients %}
+                                      {% if emerg %}
+                                        {% for clients in emerg %}
                                         
                                           <tr>
-                                              <td>
-                                                 <div class="d-inline-block align-middle">
-                                                      <img src="{{clients.imageURL}}" alt="user image" class="img-radius img-40 align-top m-r-15">
-                                                  </div>
-                                                </td>
+                                              <td><a href="{% url 'gettreat:updateEmergency' clients.id %}"><label class="label label-info">Edit</label> </a> </td>
                                               <td>{{clients.patient_Name}}</td>
-                                              <td>{{clients.Date_Of_Birth}}</td>
-                                              <td>{{clients.Address}}</td>
-                                              <td>{{clients.hospital}}</td>
-                                              <td class="text-right"><label class="label label-danger">{{clients.status}}</label></td>
+                                              <td>{{clients.Phone_Number}}</td>
+                                              <td>{{clients.patient_id}}</td>
+                                              <td>{{clients.First_Choice_Hospital}}</td>
+                                              <td class="text-right">{{clients.Request_Date}}</td>
+                                               <td class="text-right"><label class="label label-danger">{{clients.status}}</label></td>
+
                                           </tr>
                                         {% endfor %}
                                         
@@ -199,7 +200,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-xl-4 col-md-12">
+                  <div class="col-lg-12-4 col-md-12">
                       <div class="card ">
                           <div class="card-header bg-primary">
                               <h5>Our Doctors Hospital</h5>
