--- a/gettreat/templates/gettreat/hospital/sidebar.html
+++ b/gettreat/templates/gettreat/hospital/sidebar.html
@@ -46,7 +46,7 @@
             </a>
             <ul class="pcoded-submenu">
                 <li class=" ">
-                    <a href="accordion.html" class="waves-effect waves-dark">
+                    <a href="{% url 'gettreat:doctors_formpage' %}" class="waves-effect waves-dark">
                         <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
                         <span class="pcoded-mtext" data-i18n="nav.basic-components.alert">Register Doctor</span>
                         <span class="pcoded-mcaret"></span>
