--- a/gettreat/templates/gettreat/hospital/indexhp.html
+++ b/gettreat/templates/gettreat/hospital/indexhp.html
@@ -2,246 +2,103 @@
 {% load static %}
 {% block content %}
 
-<!-- Page-header start -->
-<div class="page-header">
-<div class="page-block">
-    <div class="row align-items-center">
-        <div class="col-md-8">
-            <div class="page-header-title">
-                <h5 class="m-b-10">Dashboard</h5>
-                <p class="m-b-0">Hospital name</p>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <ul class="breadcrumb-title">
-                <li class="breadcrumb-item">
-                    <a href=""> <i class="fa fa-home"></i> </a>
-                </li>
-                <li class="breadcrumb-item"><a href="">Dashboard</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
-</div>
-<!-- Page-header end -->
-<div class="pcoded-inner-content">
-  <!-- Main-body start -->
-  <div class="main-body">
-      <div class="page-wrapper">
-          <!-- Page-body start -->
-          <div class="page-body">
-              <div class="row">
-                  <!-- task, page, download counter  start -->
-                  <div class="col-xl-3 col-md-6">
-                      <div class="card">
-                          <div class="card-block">
-                              <div class="row align-items-center">
-                                  <div class="col-8">
-                                      <h4 class="text-c-purple">$30200</h4>
-                                      <h6 class="text-muted m-b-0">All Earnings</h6>
-                                  </div>
-                                  <div class="col-4 text-right">
-                                      <i class="fa fa-bar-chart f-28"></i>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="card-footer bg-c-purple">
-                              <div class="row align-items-center">
-                                  <div class="col-9">
-                                      <p class="text-white m-b-0">% change</p>
-                                  </div>
-                                  <div class="col-3 text-right">
-                                      <i class="fa fa-line-chart text-white f-16"></i>
-                                  </div>
-                              </div>
-
-                          </div>
+          <!-- Page-header start -->
+          <div class="page-header">
+          <div class="page-block">
+              <div class="row align-items-center">
+                  <div class="col-md-8">
+                      <div class="page-header-title">
+                          <h5 class="m-b-10">Dashboard</h5>
+                          <p class="m-b-0">Hospital name</p>
                       </div>
                   </div>
-                  <div class="col-xl-3 col-md-6">
-                      <div class="card">
-                          <div class="card-block">
-                              <div class="row align-items-center">
-                                  <div class="col-8">
-                                      <h4 class="text-c-green">290+</h4>
-                                      <h6 class="text-muted m-b-0">Page Views</h6>
-                                  </div>
-                                  <div class="col-4 text-right">
-                                      <i class="fa fa-file-text-o f-28"></i>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="card-footer bg-c-green">
-                              <div class="row align-items-center">
-                                  <div class="col-9">
-                                      <p class="text-white m-b-0">% change</p>
-                                  </div>
-                                  <div class="col-3 text-right">
-                                      <i class="fa fa-line-chart text-white f-16"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
+                  <div class="col-md-4">
+                      <ul class="breadcrumb-title">
+                          <li class="breadcrumb-item">
+                              <a href=""> <i class="fa fa-home"></i> </a>
+                          </li>
+                          <li class="breadcrumb-item"><a href="">Dashboard</a>
+                          </li>
+                      </ul>
                   </div>
-                  <div class="col-xl-3 col-md-6">
-                      <div class="card">
-                          <div class="card-block">
-                              <div class="row align-items-center">
-                                  <div class="col-8">
-                                      <h4 class="text-c-red">145</h4>
-                                      <h6 class="text-muted m-b-0">Task Completed</h6>
-                                  </div>
-                                  <div class="col-4 text-right">
-                                      <i class="fa fa-calendar-check-o f-28"></i>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="card-footer bg-c-red">
-                              <div class="row align-items-center">
-                                  <div class="col-9">
-                                      <p class="text-white m-b-0">% change</p>
-                                  </div>
-                                  <div class="col-3 text-right">
-                                      <i class="fa fa-line-chart text-white f-16"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-xl-3 col-md-6">
-                      <div class="card">
-                          <div class="card-block">
-                              <div class="row align-items-center">
-                                  <div class="col-8">
-                                      <h4 class="text-c-blue">500</h4>
-                                      <h6 class="text-muted m-b-0">Downloads</h6>
-                                  </div>
-                                  <div class="col-4 text-right">
-                                      <i class="fa fa-hand-o-down f-28"></i>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="card-footer bg-c-blue">
-                              <div class="row align-items-center">
-                                  <div class="col-9">
-                                      <p class="text-white m-b-0">% change</p>
-                                  </div>
-                                  <div class="col-3 text-right">
-                                      <i class="fa fa-line-chart text-white f-16"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-                  <!--  project and team member start -->
-                  <div class="col-lg-12 col-md-12">
-                      <div class="card table-card">
-                          <div class="card-header bg-info">
-                              <h5>Emergency Request</h5>
-                              <div class="card-header-right">
-                                  <ul class="list-unstyled card-option">
-                                      <li><i class="fa fa fa-wrench open-card-option"></i></li>
-                                      <li><i class="fa fa-window-maximize full-card"></i></li>
-                                      <li><i class="fa fa-minus minimize-card"></i></li>
-                                      <li><i class="fa fa-refresh reload-card"></i></li>
-                                      <li><i class="fa fa-trash close-card"></i></li>
-                                  </ul>
-                              </div>
-                          </div>
-                          <div class="card-block">
-                              <div class="table-responsive">
-                                {% include '../messages.html' %}
-                                  <table class="table table-hover">
-                                      <thead>
-                                      <tr>
-                                          <th></th>
-                                          <th>patient Name</th>
-                                          <th>Phone Number</th>
-                                          <th class="text-right">Patient ID</th>
-                                          <th>Hospital</th>
-                                          <th>Date</th>
-                                          <th>Status</th>
-                                          <th></th>
-                                      </tr>
-                                      </thead>
-                                      <tbody>
-                                      {% if emerg %}
-                                        {% for clients in emerg %}
-                                        
-                                          <tr>
-                                              <td><a href="{% url 'gettreat:updateEmergency' clients.id %}"><label class="label label-info">Edit</label> </a> </td>
-                                              <td>{{clients.patient_Name}}</td>
-                                              <td>{{clients.Phone_Number}}</td>
-                                              <td>{{clients.patient_id}}</td>
-                                              <td>{{clients.First_Choice_Hospital}}</td>
-                                              <td class="text-right">{{clients.Request_Date}}</td>
-                                               <td class="text-right"><label class="label label-danger">{{clients.status}}</label></td>
-
-                                          </tr>
-                                        {% endfor %}
-                                        
-
-                                      {% else %}
-
-                                        <tr>
-                                          <p>We Have Not Any Clients To anr hospital Yet</p>                                             
-                                        </tr>
-
-                                      {% endif %}
-                                      
-                                      </tbody>
-                                  </table>
-                                  <div class="text-right m-r-20">
-                                      <a href="#!" class=" b-b-primary text-primary">View all Projects</a>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-lg-12-4 col-md-12">
-                      <div class="card ">
-                          <div class="card-header bg-primary">
-                              <h5>Our Doctors Hospital</h5>
-                              <div class="card-header-right">
-                                  <ul class="list-unstyled card-option">
-                                      <li><i class="fa fa fa-wrench open-card-option"></i></li>
-                                      <li><i class="fa fa-window-maximize full-card"></i></li>
-                                      <li><i class="fa fa-minus minimize-card"></i></li>
-                                      <li><i class="fa fa-refresh reload-card"></i></li>
-                                      <li><i class="fa fa-trash close-card"></i></li>
-                                  </ul>
-                              </div>
-                          </div>
-                          <div class="card-block">
-                            {% if hopit %}
-                              {% for hospital in hopit %}
-                                <div class="align-middle m-b-30">
-                                    <img src="{{hospital.imageURL}}" alt="user image" class="img-radius img-40 align-top m-r-15">
-                                    <div class="d-inline-block">
-                                        <h6>{{hospital.Hospital_Name}}</h6>
-                                        <p class="text-muted m-b-0">{{hospital.status}}</p>
-                                    </div>
-                                </div>
-                                {% endfor %}
-                              {% else %}
-                                <h2>You have no Doctors registered yet</h2>
-                            {% endif %}
-                             
-                              <div class="text-center">
-                                  <a href="#!" class="b-b-primary text-primary">View all Projects</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <!--  project and team member end -->
               </div>
           </div>
-          <!-- Page-body end -->
-      </div>
-      <div id="styleSelector"> </div>
-  </div>
+          </div>
+          <!-- Page-header end -->
+          {% include 'gettreat/hospital/reports.html' %}
+
+            <!--  project and team member start -->
+            <div class="col-lg-12 col-md-12">
+                <div class="card table-card">
+                    <div class="card-header bg-info">
+                        <h5>Emergency Request</h5>
+                        <div class="card-header-right">
+                            <ul class="list-unstyled card-option">
+                                <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                <li><i class="fa fa-window-maximize full-card"></i></li>
+                                <li><i class="fa fa-minus minimize-card"></i></li>
+                                <li><i class="fa fa-refresh reload-card"></i></li>
+                                <li><i class="fa fa-trash close-card"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-block">
+                        <div class="table-responsive">
+                          {% include '../messages.html' %}
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>patient Name</th>
+                                    <th>Phone Number</th>
+                                    <th class="text-right">Patient ID</th>
+                                    <th>Hospital</th>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% if emerg %}
+                                  {% for clients in emerg %}
+                                  
+                                    <tr>
+                                        <td><a href="{% url 'gettreat:updateEmergency' clients.id %}"><label class="label label-info">Edit</label> </a> </td>
+                                        <td>{{clients.patient_Name}}</td>
+                                        <td>{{clients.Phone_Number}}</td>
+                                        <td>{{clients.patient_id}}</td>
+                                        <td>{{clients.Hospital}}</td>
+                                        <td class="text-right">{{clients.Request_Date}}</td>
+                                         <td class="text-right"><label class="label label-danger">{{clients.status}}</label></td>
+
+                                    </tr>
+                                  {% endfor %}
+                                  
+
+                                {% else %}
+
+                                  <tr>
+                                    <p>We Have Not Any Clients To any hospital Yet</p>                                             
+                                  </tr>
+
+                                {% endif %}
+                                
+                                </tbody>
+                            </table>
+                            <div class="text-right m-r-20">
+                                <a href="#!" class=" b-b-primary text-primary">View all</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- Page-body end -->
+</div>
+<div id="styleSelector"> </div>
+</div>
 </div>
 <hr class="bg-primary">
 <hr class="bg-info">
