--- a/gettreat/templates/gettreat/hospital/reports.html
+++ b/gettreat/templates/gettreat/hospital/reports.html
@@ -1,5 +1,7 @@
 <!-- task, page, download counter  start -->
-<div class="col-xl-3 col-md-6">
+<div class="row">
+  
+  <div class="col-xl-3 col-md-6">
     <div class="card">
         <div class="card-block">
             <div class="row align-items-center">
@@ -99,4 +101,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
