--- a/gettreat/templates/gettreat/hospital/sidebar.html
+++ b/gettreat/templates/gettreat/hospital/sidebar.html
@@ -32,7 +32,7 @@
     <div class="pcoded-navigation-label" data-i18n="nav.category.navigation">Layout</div>
     <ul class="pcoded-item pcoded-left-item">
         <li class="active">
-            <a href="" class="waves-effect waves-dark">
+            <a href="{% url 'gettreat:hospitapage' %}" class="waves-effect waves-dark">
                 <span class="pcoded-micon"><i class="ti-home"></i><b>D</b></span>
                 <span class="pcoded-mtext" data-i18n="nav.dash.main">Dashboard</span>
                 <span class="pcoded-mcaret"></span>
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class=" ">
-                    <a href="" class="waves-effect waves-dark">
+                    <a href="{% url 'gettreat:listdoctorspage' %}" class="waves-effect waves-dark">
                         <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
                         <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Doctors</span>
                         <span class="pcoded-mcaret"></span>
