--- a/gettreat/templates/gettreat/home/navbar.html
+++ b/gettreat/templates/gettreat/home/navbar.html
@@ -20,6 +20,21 @@
   {% if user.is_patient %}
     <a href="{% url 'gettreat:clientspage' %}">Hello, {{request.user}}</a>  | &nbsp;
     <a class="nav-link" href="{% url 'gettreat:logout' %}">Logout</a>
+  {% elif user.is_hospital %}
+
+     <a href="{% url 'gettreat:hospitapage' %}">Hello,H-admin: {{request.user}}</a>  | &nbsp;
+     <a class="nav-link" href="{% url 'gettreat:logout' %}">Logout</a>
+  {% else %}
+    
+
+  {% endif %}
+  
+  {% if user.is_admin %}  
+    <a href="{% url 'gettreat:dashboardpage' %}">Hello G-Admin, {{request.user}}</a>  | &nbsp;
+  {% endif %}
+
+  {% if user.is_authenticated %}
+     <a class="nav-link" href="{% url 'gettreat:logout' %}">Logout</a>
   {% else %}
     <a href="{% url 'gettreat:loginpage' %}"><span class="d-none d-md-inline">Sign</span> Up</a>
 
@@ -28,6 +43,7 @@
 
   <nav id="navbar" class="navbar order-last order-lg-0">
     <ul>
+      
       <li><a class="nav-link scrollto " href="/">Home</a></li>
       <li><a class="nav-link scrollto" href="{% url 'gettreat:aboutpage' %}">About</a></li>
       <li><a class="nav-link scrollto" href="{% url 'gettreat:servicepage' %}">Services</a></li>
