--- a/gettreat/templates/gettreat/hospital/navbar.html
+++ b/gettreat/templates/gettreat/hospital/navbar.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <a href="">
-        <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo" />
+        <img class="img-fluid" src="{% static 'assets/img/logo.jpg' %}" alt="Theme-Logo" />
     </a>
     <a class="mobile-options waves-effect waves-light">
         <i class="ti-more"></i>
