--- a/gettreat/templates/gettreat/admin/sidebar.html
+++ b/gettreat/templates/gettreat/admin/sidebar.html
@@ -6,7 +6,7 @@
         <div class="main-menu-header">
             <img class="img-80 img-radius" src="{% static 'assets/images/avatar-4.jpg' %}" alt="User-Profile-Image">
             <div class="user-details">
-                <span id="more-details">John Doe<i class="fa fa-caret-down"></i></span>
+                <span id="more-details">{{request.user}}<i class="fa fa-caret-down"></i></span>
             </div>
         </div>
 
