--- a/gettreat/templates/gettreat/hospital/sidebar.html
+++ b/gettreat/templates/gettreat/hospital/sidebar.html
@@ -29,7 +29,7 @@
             </div>
         </form>
     </div>
-    <div class="pcoded-navigation-label" data-i18n="nav.category.navigation">Layout</div>
+    <div class="pcoded-navigation-label" data-i18n="nav.category.navigation">****</div>
     <ul class="pcoded-item pcoded-left-item">
         <li class="active">
             <a href="{% url 'gettreat:hospitapage' %}" class="waves-effect waves-dark">
