changing the authentication

--- a/gettreat/templates/gettreat/hospital/reports.html
+++ b/gettreat/templates/gettreat/hospital/reports.html
@@ -6,8 +6,8 @@
         <div class="card-block">
             <div class="row align-items-center">
                 <div class="col-8">
-                    <h4 class="text-c-purple">$30200</h4>
-                    <h6 class="text-muted m-b-0">All Earnings</h6>
+                    <h4 class="text-c-purple">200</h4>
+                    <h6 class="text-muted m-b-0">No. of registered DRs.</h6>
                 </div>
                 <div class="col-4 text-right">
                     <i class="fa fa-bar-chart f-28"></i>
@@ -33,7 +33,7 @@
             <div class="row align-items-center">
                 <div class="col-8">
                     <h4 class="text-c-green">290+</h4>
-                    <h6 class="text-muted m-b-0">Page Views</h6>
+                    <h6 class="text-muted m-b-0">No of Permant DRs</h6>
                 </div>
                 <div class="col-4 text-right">
                     <i class="fa fa-file-text-o f-28"></i>
@@ -58,7 +58,7 @@
             <div class="row align-items-center">
                 <div class="col-8">
                     <h4 class="text-c-red">145</h4>
-                    <h6 class="text-muted m-b-0">Task Completed</h6>
+                    <h6 class="text-muted m-b-0">Resqued Patients</h6>
                 </div>
                 <div class="col-4 text-right">
                     <i class="fa fa-calendar-check-o f-28"></i>
@@ -83,7 +83,7 @@
             <div class="row align-items-center">
                 <div class="col-8">
                     <h4 class="text-c-blue">500</h4>
-                    <h6 class="text-muted m-b-0">Downloads</h6>
+                    <h6 class="text-muted m-b-0">Departments</h6>
                 </div>
                 <div class="col-4 text-right">
                     <i class="fa fa-hand-o-down f-28"></i>
