--- a/gettreat/templates/gettreat/hospital/listdoctors.html
+++ b/gettreat/templates/gettreat/hospital/listdoctors.html
@@ -42,6 +42,10 @@
             </ul>
         </div>
     </div>
+    {% for dep in department %}
+      <p>ytutyujty</p>
+
+    {% endfor%}
     <div class="card-block">
         <div class="table-responsive">
           {% include '../messages.html' %}
@@ -49,7 +53,6 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Hospital</th>
                     <th>Doctors's Name</th>
                     <th>Phone Number</th>
                     <th>Email</th>
@@ -63,7 +66,6 @@
                   
                     <tr>
                         <td><a href="{% url 'gettreat:updatedoctors' doctors.id %}"><label class="label label-info">Edit</label> </a> </td>
-                        <td>{{doctors.Hospital_Name}}</td>
                         <td>{{doctors.Doctors_Name}}</td>
                         <td>{{doctors.Phone_Number}}</td>
                         <td class="text-right">{{doctors.Email}}</td>
